Fix gap between sub hero and main section

Pull request: #642
Approved by: cwebberOps

--- a/www/source/stylesheets/_home.scss
+++ b/www/source/stylesheets/_home.scss
@@ -192,6 +192,8 @@ $sub-hero-skew: 5deg;
   padding: rem-calc(120) 0;
 
   &.first {
+    padding-top: rem-calc(160);
+    margin-top: rem-calc(-50);
     background: url('/images/graphics/main-section-first-watermark.svg') no-repeat center rem-calc(-160);
   }
 
